--- a/.github/workflows/catalog-build-deploy.yaml
+++ b/.github/workflows/catalog-build-deploy.yaml
@@ -10,10 +10,13 @@ permissions:
 jobs:
     build:
         runs-on: ubuntu-latest
+        environment: 
+            name: dev
         steps:
             - name: Az CLI login via OIDC
               uses: azure/login@v1
               with:
+    
                 client-id: ${{secrets.AZURE_CLIENT_ID}}
                 tenant-id: ${{secrets.AZURE_TENANT_ID}}
                 subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
