--- a/.github/workflows/catalog-build-deploy.yaml
+++ b/.github/workflows/catalog-build-deploy.yaml
@@ -8,10 +8,30 @@ permissions:
     contents: read
 
 jobs:
-    build:
+    deploy-dev:
         runs-on: ubuntu-latest
         environment: 
             name: dev
+        steps:
+            - name: Az CLI login via OIDC
+              uses: azure/login@v1
+              with:
+    
+                client-id: ${{secrets.AZURE_CLIENT_ID}}
+                tenant-id: ${{secrets.AZURE_TENANT_ID}}
+                subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+
+            - name: Run Az commands
+              run: |
+                az account show
+                az group list
+
+    deploy-ppd:
+        runs-on: ubuntu-latest
+        environment: 
+            name: ppd
+        needs:
+            - deploy-dev
         steps:
             - name: Az CLI login via OIDC
               uses: azure/login@v1
