--- a/.github/workflows/catalog-build-deploy.yaml
+++ b/.github/workflows/catalog-build-deploy.yaml
@@ -85,6 +85,8 @@ jobs:
                 az account show
                 az group list
             
+            - run: echo "Deploying to ${{ matrix.environment }} environment"
+  
             - name: Deploy to Azure Web App
               uses: azure/webapps-deploy@v3
               with:
@@ -130,11 +132,13 @@ jobs:
                 az account show
                 az group list
             
-            - name: Deploy to Azure Web App
-              uses: azure/webapps-deploy@v3
-              with:
-                app-name: eshop-catalog-${{ matrix.environment }}
-                package: './publish'
+            - run: echo "Deploying to ${{ matrix.environment }} environment"
+  
+            # - name: Deploy to Azure Web App
+            #   uses: azure/webapps-deploy@v3
+            #   with:
+            #     app-name: eshop-catalog-${{ matrix.environment }}
+            #     package: './publish'
 
             - name: Logout from Azure
               run: az logout
