--- a/.github/workflows/catalog-build-deploy.yaml
+++ b/.github/workflows/catalog-build-deploy.yaml
@@ -75,7 +75,6 @@ jobs:
             - name: Az CLI login via OIDC
               uses: azure/login@v1
               with:
-    
                 client-id: ${{secrets.AZURE_CLIENT_ID}}
                 tenant-id: ${{secrets.AZURE_TENANT_ID}}
                 subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
@@ -95,6 +94,7 @@ jobs:
                 echo "Commit SHA: $GITHUB_SHA"
                 echo "Ref: $GITHUB_REF"
                 echo "Run Number: $GITHUB_RUN_NUMBER"
+                echo "Env: $GITHUB_ENV"
   
             - name: Deploy to Azure Web App
               uses: azure/webapps-deploy@v3
