--- a/.github/workflows/catalog-build-deploy.yaml
+++ b/.github/workflows/catalog-build-deploy.yaml
@@ -99,7 +99,7 @@ jobs:
             - name: Deploy to Azure Web App
               uses: azure/webapps-deploy@v3
               with:
-                app-name: eshop-catalog-${{ github.env }}
+                app-name: eshop-catalog-$GITHUB_ENV
                 package: './publish'
 
             - name: Logout from Azure
