--- a/.github/workflows/catalog-build-deploy.yaml
+++ b/.github/workflows/catalog-build-deploy.yaml
@@ -84,22 +84,10 @@ jobs:
                 az account show
                 az group list
 
-            - name: Get Environment Info
-              run: |
-                echo "Run ID: $GITHUB_RUN_ID"
-                echo "Workflow: $GITHUB_WORKFLOW"
-                echo "Action: $GITHUB_ACTION"
-                echo "Repository: $GITHUB_REPOSITORY"
-                echo "Event Name: $GITHUB_EVENT_NAME"
-                echo "Commit SHA: $GITHUB_SHA"
-                echo "Ref: $GITHUB_REF"
-                echo "Run Number: $GITHUB_RUN_NUMBER"
-                echo "Env: $GITHUB_ENV"
-  
             - name: Deploy to Azure Web App
               uses: azure/webapps-deploy@v3
               with:
-                app-name: eshop-catalog-$GITHUB_ENV
+                app-name: eshop-catalog-dev
                 package: './publish'
 
             - name: Logout from Azure
@@ -146,7 +134,7 @@ jobs:
             - name: Deploy to Azure Web App
               uses: azure/webapps-deploy@v3
               with:
-                app-name: eshop-catalog-${{ github.env }}
+                app-name: eshop-catalog-ppd
                 package: './publish'
 
             - name: Logout from Azure
