added prod as input varibale

--- a/.github/workflows/catalog-build-deploy.yaml
+++ b/.github/workflows/catalog-build-deploy.yaml
@@ -10,6 +10,7 @@ on:
                 options:
                     - dev
                     - ppd
+                    - prod  
     
 permissions:
     id-token: write
