--- a/catalog/src/Eshop.Catalog.Api/appsettings.json
+++ b/catalog/src/Eshop.Catalog.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Catalog": "Server=localhost;Port=5433;User Id=postgres;Database=catalog;"
+  },
   "EnableSwagger": true,
   "Logging": {
     "LogLevel": {
