--- a/catalog/src/Eshop.Catalog.Api/appsettings.json
+++ b/catalog/src/Eshop.Catalog.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Catalog": "Server=localhost;Port=5433;User Id=postgres;Database=catalog;"
+    "Catalog": "Server=psql-eshop-catalog-dev.postgres.database.azure.com;Port=5432;User Id=ag-eshop-pg-admins-dev;Database=catalog;Ssl Mode=VerifyFull"
   },
   "EnableSwagger": true,
   "Logging": {
